# trader

./: .env.template  .flake8  .gitignore  .readthedocs.yaml  LICENSE  Makefile  README.md  pyproject.toml  setup.py
docs/source/: conf.py  index.rst
examples/: ma.py  mt5.py
src/: _.py  benchmark.py
src/expert/: main.py  shift.py  symbol.py
src/techind/: __init__.py  data.py  dataset.py  indicator.py  ma.py  macd.py  market.py  symbol.py  timeframe.py  types.py
src/techind/indicators/: ma.py  macd.py  template.py
src/techind/properties/: method.py  period.py  price.py  shift.py  slots.py  symbol.py  timeframe.py
src/trader/: __main__.py  __version__.py  main.py
